# rust-dalvik-vm

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  proguard-runtime.pro
android_tools/: Cargo.toml
android_tools/src/: d8.rs  lib.rs
runtime/: Entrypoint.java
src/: debug.rs  dex_file.rs  endian_aware_reader.rs  entrypoint.rs  main.rs  parser.rs  raw_dex_file.rs
src/bytecode/: formats.rs  instructions.rs  mod.rs
src/dex/: access_flags.rs  dex_file.rs  endian_aware_reader.rs  mod.rs  raw_dex_file.rs
src/runtime/: class.rs  class_loader.rs  frame.rs  instance.rs  interpreter.rs  mocks.rs  mod.rs  runtime.rs  value.rs
src/smali/: parser.rs
src/smali/ast/: literals.rs  method_body.rs  mod.rs  modifiers.rs  parse_errors.rs  statement.rs  try_downcast.rs  util.rs
src/smali/ast/directives/: directives.rs  mod.rs  parse_class.rs  parser.rs
src/smali/ast/instructions/: binary_instruction.rs  i.rs  instruction.rs  mod.rs  registers.rs  ternary_instruction.rs
src/smali/ast/types/: any.rs  array.rs  assignable_value.rs  field_name_and_type.rs  mod.rs  non_array_type.rs  non_void.rs  primitive.rs  reference.rs  reference_or_array.rs  void.rs
src/testing/: interpreter.rs
src/vm/: debugger.rs  main.rs  mod.rs
tests/vm/: hello.dex
