[package]
name = "dalvik-vm-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dalvik-vm-rust"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antlr-rust = "0.3.0-beta"
dexparser = "0.6.2"
adler = "1.0.2"
byteorder = "1.5.0"
buffered-reader = "1.3.0"
leb128 = "0.2.5"
mutf8 = "0.5.0"
bitmask-enum = "2.2.3"
dex = "0.5.0"
