[package]
name = "dalvik-vm-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dalvik-vm-rust"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dexparser = "0.6.2"
adler = "1.0.2"
byteorder = "1.5.0"
buffered-reader = "1.3.0"
leb128 = "0.2.5"
mutf8 = "0.5.0"
bitmask-enum = "2.2.3"
dex = "0.5.0"
bitreader = "0.3.8"
bitstream-io = "1.10.0"
regex = { version = "1.10.2", features = [] }
cmd_lib = "1.9.3"
indoc = "2.0.4"
android_tools = { path = "android_tools" }
dioxus = "0.5.1"
tokio = { version = "1.38.0", features = ["full"] }
dioxus-desktop = "0.5.1"
utoipa = "4.1.0"

[build-dependencies]
downloader = { version = "0.2.7", features = ["default-tls", "verify"] }
zip-extract = "0.1.3"
cmd_lib = "1.9.4"
sha256 = "1.5.0"
android_tools = { path = "android_tools" }
